# landler

./: Main.hs  Makefile  README.md  landler.cabal
Language/: Landler.hs
Language/Landler/: Parser.hs  Typer.hs  Types.hs
Test/: QC.hs  Unit.hs
examples/: cond.lambda  cycleA.lambda  cycleB.lambda  fix.lambda  import.lambda  pair.lambda  prelude.lambda  scott.lambda
