Name:           landler
Version:        0.1.0
Cabal-Version:  >= 1.6
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/landler
Category:       Compilers/Interpreters
Synopsis:       Extended lambda-calculus evaluator
Build-type:     Simple
Description:
        This package provides an extended lambda-calculus evaluator.
        You may use either the library or the interpreter
        directly. See the README.md file for details.

Extra-source-files:     Makefile

Data-files:             README.md

Source-repository head
  Type:                 git
  Location:             git://github.com/scvalex/landler.git

Executable landler
  Main-Is:              Main.hs

Library
  Build-Depends:         base >= 4 && <5, interpol >= 0.2, parsec >= 3,
                         containers, transformers
  Ghc-options:           -Wall
  Exposed-modules:       Language.Landler
  Other-modules:         Language.Landler.Parser
